--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 //= template/head.html
 
 <div class="wrapper">
+    <!-- header -->
     <header>
       <div class="header-top both">
         <a href="#" class="logo left" >
@@ -50,9 +51,9 @@
                для большей безопасности проекта на сервере.
           </p>
       </div>
-    </header>
-
+    </header><!-- \header\ -->
 </div>
+<!-- baner -->
 <div class="baner both">
     <div class="baner-title left">
       <p class="big-h"> <span>2 460 </span> м <sup>2</sup> в продаже</p>
@@ -68,5 +69,152 @@
         </a>
       </div>
     </div>
+</div><!--\ baner \-->
+<div class="wrapper">
+  <!-- Our advantages -->
+  <div class="our-advantages">
+    <h4 class="castum-h4"><span>Наши преимущества</span></h4>
+    <!-- slid-box -->
+    <div class="slid-box both">
+        <!-- slid-advanteges -->
+        <div class="wr-slid left">
+          <div class="slid-advanteges both">
+            <!-- item -->
+            <div class="item">
+              <div class="descript left">
+                <a href="#">добросовестное строительсвто</a>
+                <p>
+                  Для работы продукта требуется наличие PHP версии не ниже 4.3.х.
+                   Продукт поставляется также для PHP 5. Выбор PHP-версии зависит
+                   от требований, предъявляемых вашим
+                </p>
+              </div>
+              <div class="img right">
+                <img src="images/slid-img-1.jpg" alt="img">
+              </div>
+            </div><!-- \item\ -->
+
+            <div class="item">
+              <div class="descript left">
+                <a href="#">выгодная ипотека</a>
+                <p>
+                  Для работы продукта требуется наличие PHP версии не ниже 4.3.х.
+                   Продукт поставляется также для PHP 5. Выбор PHP-версии зависит
+                   от требований, предъявляемых вашим
+                </p>
+              </div>
+              <div class="img right">
+                <img src="images/slid-img-2.jpg" alt="img">
+              </div>
+            </div>
+
+            <div class="item">
+              <div class="descript left">
+                <a href="#">добросовестное строительсвто</a>
+                <p>
+                  Для работы продукта требуется наличие PHP версии не ниже 4.3.х.
+                   Продукт поставляется также для PHP 5. Выбор PHP-версии зависит
+                   от требований, предъявляемых вашим
+                </p>
+              </div>
+              <div class="img right">
+                <img src="images/slid-img-1.jpg" alt="img">
+              </div>
+            </div>
+
+          </div>
+        </div><!-- \slid-advanteges\ -->
+
+        <!-- slid-advanteges -->
+        <div class="wr-slid right">
+          <div class="slid-advanteges both">
+            <!-- item -->
+            <div class="item">
+              <div class="descript left">
+                <a href="#">выгодная ипотека</a>
+                <p>
+                  Для работы продукта требуется наличие PHP версии не ниже 4.3.х.
+                   Продукт поставляется также для PHP 5. Выбор PHP-версии зависит
+                   от требований, предъявляемых вашим
+                </p>
+              </div>
+              <div class="img right">
+                <img src="images/slid-img-2.jpg" alt="img">
+              </div>
+            </div><!-- \item\ -->
+
+            <div class="item">
+              <div class="descript left">
+                <a href="#">добросовестное строительсвто</a>
+                <p>
+                  Для работы продукта требуется наличие PHP версии не ниже 4.3.х.
+                   Продукт поставляется также для PHP 5. Выбор PHP-версии зависит
+                   от требований, предъявляемых вашим
+                </p>
+              </div>
+              <div class="img right">
+                <img src="images/slid-img-1.jpg" alt="img">
+              </div>
+            </div>
+
+            <div class="item">
+              <div class="descript left">
+                <a href="#">выгодная ипотека</a>
+                <p>
+                  Для работы продукта требуется наличие PHP версии не ниже 4.3.х.
+                   Продукт поставляется также для PHP 5. Выбор PHP-версии зависит
+                   от требований, предъявляемых вашим
+                </p>
+              </div>
+              <div class="img right">
+                <img src="images/slid-img-2.jpg" alt="img">
+              </div>
+            </div>
+
+          </div>
+        </div><!-- \slid-advanteges\ -->
+
+    </div><!--\ Our advantages \-->
+
+  </div><!-- slid-box -->
+
+  <!-- company -->
+  <div class="company-box">
+    <h4 class="castum-h4"><span>компании</span></h4>
+    <div class="company both">
+      <!-- company-item -->
+        <div class="company-item outer">
+          <i class="company-icon"></i>
+          <img src="images/company-icon-1.png" alt="img">
+          <a href="#"></a>
+        </div><!-- \company-item\ -->
+
+        <div class="company-item outer">
+          <i class="company-icon"></i>
+          <img src="images/company-icon-2.png" alt="img">
+          <a href="#"></a>
+        </div>
+        <div class="company-item outer">
+          <i class="company-icon"></i>
+          <img src="images/company-icon-3.png" alt="img">
+          <a href="#"></a>
+        </div>
+        <div class="company-item outer">
+          <i class="company-icon"></i>
+          <img src="images/company-icon-4.png" alt="img">
+          <a href="#"></a>
+        </div>
+        <div class="company-item outer">
+          <i class="company-icon"></i>
+          <img src="images/company-icon-5.png" alt="img">
+          <a href="#"></a>
+        </div>
+    </div>
+
+
+
+  </div> <!-- \company\ -->
 </div>
+
+
 //= template/footer.html
