--- a/src/index.html
+++ b/src/index.html
@@ -53,6 +53,7 @@
       </div>
     </header><!-- \header\ -->
 </div>
+
 <!-- baner -->
 <div class="baner both">
     <div class="baner-title left">
@@ -70,6 +71,7 @@
       </div>
     </div>
 </div><!--\ baner \-->
+
 <div class="wrapper">
   <!-- Our advantages -->
   <div class="our-advantages">
@@ -204,7 +206,7 @@
           <img src="images/company-icon-4.png" alt="img">
           <a href="#"></a>
         </div>
-        <div class="company-item outer">
+        <div class="company-item hidden-lg outer">
           <i class="company-icon"></i>
           <img src="images/company-icon-5.png" alt="img">
           <a href="#"></a>
@@ -214,6 +216,206 @@
 
 
   </div> <!-- \company\ -->
+
+  <!-- city -->
+  <div class="city">
+    <div class="castum-h4">
+      <span>Города
+
+        <select>
+          <option>Ваш город</option>
+          <option>Ваш город 1</option>
+          <option>Ваш город 2</option>
+        </select>
+      </span>
+
+    </div>
+    <div class="box-map-city">
+      <img src="images/map-sity1.png" alt="map">
+        <!-- <img src="images/map-sity.png" alt="map">
+        <i class="mark-map-1 mark-1"></i>
+        <i class="mark-map-2 mark-2"></i>
+        <i class="mark-map-3 mark-3"><span>4</span></i> -->
+    </div>
+  </div><!--\ city\ -->
+  <!-- objects -->
+  <div class="objects">
+      <div class="h4 both">
+        <span>Объекты</span>
+        <!-- form-sort -->
+        <form class="form-sort">
+          <label>
+            <input type="checkbox">
+            Эконом
+          </label>
+          <label>
+            <input type="checkbox">
+            бизнес
+          </label>
+          <label>
+            <input type="checkbox">
+            комфорт
+          </label>
+          <select>
+            <option>опции</option>
+            <option>опции 1</option>
+            <option>опции 2</option>
+          </select>
+          <!-- slid-input -->
+          </form><!-- form-sort -->
+          <form class="form-sort two-form">
+          <label class="wr-slid-input both">
+            <span class="title-slid left">
+              цена
+              <span>(тыс. руб.)</span>
+            </span>
+            <span class="slid-input right">
+              <input type="text" id="slid-1" name="name" value="" />
+            </span>
+
+          </label><!-- \slid-input\ -->
+
+          <label class="wr-slid-input both">
+            <span class="title-slid left">
+              площадь
+              <span>(м2)</span>
+            </span>
+            <span class="slid-input right">
+              <input type="text" id="slid-2" name="name" value="" />
+            </span>
+
+          </label>
+
+        </form><!-- form-sort -->
+      </div>
+      <div class="objects-cont both">
+          <!-- objects-item -->
+          <div class="objects-item">
+              <img src="images/object-img-1.jpg" alt="img">
+              <a class="object-title cast both" href="#">
+                <span class="left">
+                  <span class="h-tit">
+                    <span> Жк «Маяк» <br>
+                      45 </span>
+                       квартир доступно
+                  </span> <br>
+                  <span>
+                    Для работы продукта требуется <br>
+                     наличие PHP версии не ниже 4.3.х. <br>
+                    Продукт поставляется также для PHP 5.
+                  </span>
+                </span>
+
+                <span class="maps-obj left">
+                    <i class="map-link-w"></i>
+                    <span>
+                      Выбор <br>
+                      квартиры
+                    </span>
+                </span>
+                <i class="link-ico"></i>
+              </a>
+          </div><!-- \objects-item\ -->
+
+          <div class="objects-item cast-two">
+              <img src="images/object-img-2.jpg" alt="img">
+              <a class="object-title both" href="#">
+                Жк «Айсберг»
+              </a>
+          </div>
+          <div class="objects-item cast-two">
+              <img src="images/object-img-2.jpg" alt="img">
+              <a class="object-title both" href="#">
+                Жк «Айсберг»
+              </a>
+          </div>
+          <div class="objects-item cast-two">
+              <img src="images/object-img-2.jpg" alt="img">
+              <a class="object-title both" href="#">
+                Жк «Айсберг»
+              </a>
+          </div>
+      </div>
+
+  </div><!-- \objects\ -->
+
+</div>
+
+<div class="nav-asid">
+  <div class="nav-bg"></div>
+  <div class="asid-menu">
+    <ul>
+      <li>
+        <a href="#">
+          <i class="nav-asid-icon-1"></i>
+          <span>О корпорации</span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="nav-asid-icon-2"></i>
+          <span>Компании</span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="nav-asid-icon-3"></i>
+          <span>Города</span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="nav-asid-icon-4"></i>
+          <span>Объекты</span>
+        </a>
+      </li>
+    </ul>
+    <span class="asid-tel">787-787</span>
+  </div>
+
+
+</div>
+<div class="wrapper">
+    <!-- footer -->
+    <footer>
+      <div class="header-top both">
+        <a href="#" class="logo left" >
+          <img src="images/logo.png" alt="logo" />
+        </a>
+        <div class="aside-nav right">
+            <span class="head-tel"> <i class="phone"></i> +7 (4722) 787-787 <a href="#">info@goodsol.ru</a></span>
+            <span class="entrance">
+                <i class="lock"></i>
+                <a href="#">Вход</a>
+                    &frasl;
+                <a href="#">регистрация</a>
+            </span>
+            <nav class="header-nav">
+              <ul>
+                <li class="active">
+                  <a href="#">О корпорации </a>
+                </li>
+                <li>
+                  <a href="#">Новости</a>
+                </li>
+                <li>
+                  <a href="#">Агентам</a>
+                </li>
+                <li>
+                  <a href="#">Застройщикам</a>
+                </li>
+                <li>
+                  <a href="#">Помощь</a>
+                </li>
+                <li>
+                  <a href="#">Контакты</a>
+                </li>
+              </ul>
+            </nav>
+        </div>
+      </div>
+
+    </footer><!-- \footer\ -->
 </div>
 
 
