--- a/src/index.html
+++ b/src/index.html
@@ -390,7 +390,7 @@
   </div><!-- \objects\ -->
 
 </div>
-
+<!-- nav-asid -->
 <div class="nav-asid">
   <div class="nav-bg"></div>
   <div class="asid-menu">
@@ -424,7 +424,8 @@
   </div>
 
 
-</div>
+</div><!-- \nav-asid\ -->
+
 <div class="wrapper">
     <!-- footer -->
     <footer>
