two pages mobail

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 //= template/head.html
 
-<div class="wrapper">
+<div class="wrapper pad-wr">
     <!-- header -->
     <header>
       <div class="header-top both">
@@ -108,7 +108,7 @@
         <img src="images/crane.png" alt="img">
     </div>
     <div class="baner-content">
-      <div class="wrapper">
+      <div class="wrapper pad-wr">
         <a href="#" class="choose-apartment">
           <i class="map-link"></i>
           <span>Выбор квартиры</span>
@@ -117,7 +117,7 @@
     </div>
 </div><!--\ baner \-->
 
-<div class="wrapper">
+<div class="wrapper pad-wr">
   <!-- Our advantages -->
   <div class="our-advantages">
     <h4 class="castum-h4"><span>Наши преимущества</span></h4>
@@ -426,7 +426,7 @@
 
 </div><!-- \nav-asid\ -->
 
-<div class="wrapper">
+<div class="wrapper pad-wr">
     <!-- footer -->
     <footer>
       <div class="header-top both">
