--- a/src/kvartira.html
+++ b/src/kvartira.html
@@ -4,58 +4,58 @@
     <!-- header -->
     <header>
       <div class="header-top both">
-        <a href="#" class="logo left" >
+        <a href="javascript: void(0);" class="logo left" >
           <img src="images/logo.png" alt="logo" />
         </a>
         <div class="aside-nav right">
             <span class="head-tel"> <i class="phone"></i> +7 (4722) 787-787</span>
             <span class="entrance">
                 <i class="lock"></i>
-                <a href="#">Вход</a>
+                <a href="javascript: void(0);">Вход</a>
                     &frasl;
-                <a href="#">регистрация</a>
+                <a href="javascript: void(0);">регистрация</a>
             </span>
 
             <nav class="header-nav">
-              <a class="butt-nav" href="#">
+              <a class="butt-nav" href="javascript: void(0);">
                 <i class="burger"></i>
                   МЕНЮ
               </a>
               <ul>
                 <li class="active">
-                  <a href="#">О корпорации </a>
+                  <a href="javascript: void(0);">О корпорации </a>
                 </li>
                 <li>
-                  <a href="#">Новости</a>
+                  <a href="javascript: void(0);">Новости</a>
                 </li>
                 <li>
-                  <a href="#">Агентам</a>
+                  <a href="javascript: void(0);">Агентам</a>
                 </li>
                 <li>
-                  <a href="#">Застройщикам</a>
+                  <a href="javascript: void(0);">Застройщикам</a>
                 </li>
                 <li>
-                  <a href="#">Помощь</a>
+                  <a href="javascript: void(0);">Помощь</a>
                 </li>
                 <li>
-                  <a href="#">Контакты</a>
+                  <a href="javascript: void(0);">Контакты</a>
                 </li>
               </ul>
             </nav>
             <nav class="phon-tel-mob">
               <ul>
                 <li>
-                  <a class="outer" href="#">
+                  <a class="outer" href="javascript: void(0);">
                     <i class="lock"></i>
                   </a>
                 </li>
                 <li class="hidden-xs">
-                  <a class="outer" href="#">
+                  <a class="outer" href="javascript: void(0);">
                     <i class="phone"></i>
                   </a>
                 </li>
               </ul>
-              <a class="butt-mob-nav" href="#">
+              <a class="butt-mob-nav" href="javascript: void(0);">
                 <i class="burger-mob"></i>
                   МЕНЮ
               </a>
@@ -63,22 +63,22 @@
             <nav class="header-nav mobail-nav-header">
               <ul>
                 <li class="active">
-                  <a href="#">О корпорации </a>
+                  <a href="javascript: void(0);">О корпорации </a>
                 </li>
                 <li>
-                  <a href="#">Новости</a>
+                  <a href="javascript: void(0);">Новости</a>
                 </li>
                 <li>
-                  <a href="#">Агентам</a>
+                  <a href="javascript: void(0);">Агентам</a>
                 </li>
                 <li>
-                  <a href="#">Застройщикам</a>
+                  <a href="javascript: void(0);">Застройщикам</a>
                 </li>
                 <li>
-                  <a href="#">Помощь</a>
+                  <a href="javascript: void(0);">Помощь</a>
                 </li>
                 <li>
-                  <a href="#">Контакты</a>
+                  <a href="javascript: void(0);">Контакты</a>
                 </li>
               </ul>
             </nav>
@@ -96,30 +96,30 @@
           <span>Квартира</span>
           <ul class="bread-crumbs right">
             <li>
-              <a href="#">Главная</a>
+              <a href="javascript: void(0);">Главная</a>
             </li>
             <li>
-              <a href="#">Поиск квартиры</a>
+              <a href="javascript: void(0);">Поиск квартиры</a>
             </li>
             <li>
-              <a href="#">Квартира</a>
+              <a href="javascript: void(0);">Квартира</a>
             </li>
           </ul>
       </div>
       <span class="street">ул. Константинопольская, 55</span>
       <span class="video-objekt right">
           <i class="video"></i>
-          <a href="#">Видео объекта</a>
+          <a href="javascript: void(0);">Видео объекта</a>
       </span>
       <!-- nav-pages -->
       <nav class="nav-pages">
         <ul>
-          <li><a href="#">Описание</a></li>
-          <li><a href="#">преимущества</a></li>
-          <li><a href="#">Карта</a></li>
-          <li><a href="#">Объект</a></li>
-          <li><a href="#">Разрешающие документы</a></li>
-          <li><a href="#">другие квартиры в этом доме</a></li>
+          <li><a href="javascript: void(0);">Описание</a></li>
+          <li><a href="javascript: void(0);">преимущества</a></li>
+          <li><a href="javascript: void(0);">Карта</a></li>
+          <li><a href="javascript: void(0);">Объект</a></li>
+          <li><a href="javascript: void(0);">Разрешающие документы</a></li>
+          <li><a href="javascript: void(0);">другие квартиры в этом доме</a></li>
         </ul>
       </nav><!-- \nav-pages\ -->
       <!-- desc-kvartira -->
@@ -178,9 +178,9 @@
               </ul>
               <span class="planing">
                 <i class="map-link-b"></i>
-                <a href="#">Планировка</a>
+                <a href="javascript: void(0);">Планировка</a>
               </span>
-              <a class="lik-stroy" href="#">Стройгрупп</a> <br>
+              <a class="lik-stroy" href="javascript: void(0);">Стройгрупп</a> <br>
               <span>Сдача 2 квартрал 2016  </span> <i class="crane-min"></i> <br>
               <span class="price">4 000 0000 руб.</span>
           </div>
@@ -217,7 +217,7 @@
             <!-- item -->
             <div class="item">
               <div class="descript left">
-                <a href="#">добросовестное строительсвто</a>
+                <a href="javascript: void(0);">добросовестное строительсвто</a>
                 <p>
                   Для работы продукта требуется наличие PHP версии не ниже 4.3.х.
                    Продукт поставляется также для PHP 5. Выбор PHP-версии зависит
@@ -231,7 +231,7 @@
 
             <div class="item">
               <div class="descript left">
-                <a href="#">выгодная ипотека</a>
+                <a href="javascript: void(0);">выгодная ипотека</a>
                 <p>
                   Для работы продукта требуется наличие PHP версии не ниже 4.3.х.
                    Продукт поставляется также для PHP 5. Выбор PHP-версии зависит
@@ -245,7 +245,7 @@
 
             <div class="item">
               <div class="descript left">
-                <a href="#">добросовестное строительсвто</a>
+                <a href="javascript: void(0);">добросовестное строительсвто</a>
                 <p>
                   Для работы продукта требуется наличие PHP версии не ниже 4.3.х.
                    Продукт поставляется также для PHP 5. Выбор PHP-версии зависит
@@ -266,7 +266,7 @@
             <!-- item -->
             <div class="item">
               <div class="descript left">
-                <a href="#">выгодная ипотека</a>
+                <a href="javascript: void(0);">выгодная ипотека</a>
                 <p>
                   Для работы продукта требуется наличие PHP версии не ниже 4.3.х.
                    Продукт поставляется также для PHP 5. Выбор PHP-версии зависит
@@ -280,7 +280,7 @@
 
             <div class="item">
               <div class="descript left">
-                <a href="#">добросовестное строительсвто</a>
+                <a href="javascript: void(0);">добросовестное строительсвто</a>
                 <p>
                   Для работы продукта требуется наличие PHP версии не ниже 4.3.х.
                    Продукт поставляется также для PHP 5. Выбор PHP-версии зависит
@@ -294,7 +294,7 @@
 
             <div class="item">
               <div class="descript left">
-                <a href="#">выгодная ипотека</a>
+                <a href="javascript: void(0);">выгодная ипотека</a>
                 <p>
                   Для работы продукта требуется наличие PHP версии не ниже 4.3.х.
                    Продукт поставляется также для PHP 5. Выбор PHP-версии зависит
@@ -321,28 +321,28 @@
         <div class="company-item">
           <i class="company-icon"></i>
           <img src="images/company-icon-6.png" alt="img">
-          <a href="#"></a>
+          <a href="javascript: void(0);"></a>
         </div><!-- \company-item\ -->
 
         <div class="company-item">
           <i class="company-icon"></i>
           <img src="images/company-icon-7.png" alt="img">
-          <a href="#"></a>
+          <a href="javascript: void(0);"></a>
         </div>
         <div class="company-item hidden-xs">
           <i class="company-icon"></i>
           <img src="images/company-icon-8.png" alt="img">
-          <a href="#"></a>
+          <a href="javascript: void(0);"></a>
         </div>
         <div class="company-item hidden-md">
           <i class="company-icon"></i>
           <img src="images/company-icon-9.png" alt="img">
-          <a href="#"></a>
+          <a href="javascript: void(0);"></a>
         </div>
         <div class="company-item hidden-lg-two">
           <i class="company-icon"></i>
           <img src="images/company-icon-10.png" alt="img">
-          <a href="#"></a>
+          <a href="javascript: void(0);"></a>
         </div>
     </div>
 
@@ -357,12 +357,12 @@
     <div class="other both">
       <!-- item -->
       <div class="item">
-        <a class="left" href="#">
+        <a class="left" href="javascript: void(0);">
             <img src="images/other-img.png" alt="img">
         </a>
         <ul>
           <li>
-            <a class="tit" href="#">ул. Константинопольская, 55</a>
+            <a class="tit" href="javascript: void(0);">ул. Константинопольская, 55</a>
           </li>
           <li>
             <span>Комнаты</span>
@@ -378,7 +378,7 @@
             <span class="pric">4 000 тыс. руб.</span>
           </li>
           <li>
-            <a href="#">Стройгрупп</a>
+            <a href="javascript: void(0);">Стройгрупп</a>
           </li>
           <li>
             Сдача 2 квартрал 2016
@@ -388,12 +388,12 @@
       </div><!-- item -->
 
       <div class="item">
-        <a class="left" href="#">
+        <a class="left" href="javascript: void(0);">
             <img src="images/other-img.png" alt="img">
         </a>
         <ul>
           <li>
-            <a class="tit" href="#">ул. Константинопольская, 55</a>
+            <a class="tit" href="javascript: void(0);">ул. Константинопольская, 55</a>
           </li>
           <li>
             <span>Комнаты</span>
@@ -409,7 +409,7 @@
             <span class="pric">4 000 тыс. руб.</span>
           </li>
           <li>
-            <a href="#">Стройгрупп</a>
+            <a href="javascript: void(0);">Стройгрупп</a>
           </li>
           <li>
             Сдача 2 квартрал 2016
@@ -419,12 +419,12 @@
       </div>
 
       <div class="item">
-        <a class="left" href="#">
+        <a class="left" href="javascript: void(0);">
             <img src="images/other-img.png" alt="img">
         </a>
         <ul>
           <li>
-            <a class="tit" href="#">ул. Константинопольская, 55</a>
+            <a class="tit" href="javascript: void(0);">ул. Константинопольская, 55</a>
           </li>
           <li>
             <span>Комнаты</span>
@@ -440,7 +440,7 @@
             <span class="pric">4 000 тыс. руб.</span>
           </li>
           <li>
-            <a href="#">Стройгрупп</a>
+            <a href="javascript: void(0);">Стройгрупп</a>
           </li>
           <li>
             Сдача 2 квартрал 2016
@@ -450,12 +450,12 @@
       </div>
 
       <div class="item">
-        <a class="left" href="#">
+        <a class="left" href="javascript: void(0);">
             <img src="images/other-img.png" alt="img">
         </a>
         <ul>
           <li>
-            <a class="tit" href="#">ул. Константинопольская, 55</a>
+            <a class="tit" href="javascript: void(0);">ул. Константинопольская, 55</a>
           </li>
           <li>
             <span>Комнаты</span>
@@ -471,7 +471,7 @@
             <span class="pric">4 000 тыс. руб.</span>
           </li>
           <li>
-            <a href="#">Стройгрупп</a>
+            <a href="javascript: void(0);">Стройгрупп</a>
           </li>
           <li>
             Сдача 2 квартрал 2016
@@ -481,12 +481,12 @@
       </div>
 
       <div class="item">
-        <a class="left" href="#">
+        <a class="left" href="javascript: void(0);">
             <img src="images/other-img.png" alt="img">
         </a>
         <ul>
           <li>
-            <a class="tit" href="#">ул. Константинопольская, 55</a>
+            <a class="tit" href="javascript: void(0);">ул. Константинопольская, 55</a>
           </li>
           <li>
             <span>Комнаты</span>
@@ -502,7 +502,7 @@
             <span class="pric">4 000 тыс. руб.</span>
           </li>
           <li>
-            <a href="#">Стройгрупп</a>
+            <a href="javascript: void(0);">Стройгрупп</a>
           </li>
           <li>
             Сдача 2 квартрал 2016
@@ -525,7 +525,7 @@
 <div class="nav-asid-two">
   <div class="nav-bg-two"></div>
   <div class="asid-menu">
-    <a href="#" class="clok-menu"></a>
+    <a href="javascript: void(0);" class="clok-menu"></a>
     <div class="asid-two-cont">
       <form class="castum-asid">
         <select>
@@ -574,14 +574,14 @@
             <input type="text" id="slid-6" />
           </span>
         </label>
-        <a href="#">Дополнительные параметры</a>
+        <a href="javascript: void(0);">Дополнительные параметры</a>
         <label class="disp">
           <input type="submit" value="Найти">
         </label>
-        <a class="min" href="#">очистить параметры</a>
+        <a class="min" href="javascript: void(0);">очистить параметры</a>
       </form>
       <span class="asid-tel">787-787</span>
-      <a href="#">info@goodsol.ru</a>
+      <a href="javascript: void(0);">info@goodsol.ru</a>
     </div>
   </div>
 
@@ -593,38 +593,38 @@
     <!-- footer -->
     <footer>
       <div class="header-top both">
-        <a href="#" class="logo left" >
+        <a href="javascript: void(0);" class="logo left" >
           <img src="images/logo.png" alt="logo" />
         </a>
         <div class="aside-nav right">
-            <span class="head-tel"> <i class="phone"></i> +7 (4722) 787-787 <a href="#">info@goodsol.ru</a></span>
+            <span class="head-tel"> <i class="phone"></i> +7 (4722) 787-787 <a href="javascript: void(0);">info@goodsol.ru</a></span>
             <a class="but-nav-footer" href="#menu-footer">Меню</a>
             <span class="entrance">
                 <i class="lock"></i>
-                <a href="#">Вход</a>
+                <a href="javascript: void(0);">Вход</a>
                     &frasl;
-                <a href="#">регистрация</a>
+                <a href="javascript: void(0);">регистрация</a>
             </span>
             <nav id="menu-footer" class="header-nav">
 
               <ul>
                 <li class="active">
-                  <a href="#">О корпорации </a>
+                  <a href="javascript: void(0);">О корпорации </a>
                 </li>
                 <li>
-                  <a href="#">Новости</a>
+                  <a href="javascript: void(0);">Новости</a>
                 </li>
                 <li>
-                  <a href="#">Агентам</a>
+                  <a href="javascript: void(0);">Агентам</a>
                 </li>
                 <li>
-                  <a href="#">Застройщикам</a>
+                  <a href="javascript: void(0);">Застройщикам</a>
                 </li>
                 <li>
-                  <a href="#">Помощь</a>
+                  <a href="javascript: void(0);">Помощь</a>
                 </li>
                 <li >
-                  <a href="#">Контакты</a>
+                  <a href="javascript: void(0);">Контакты</a>
                 </li>
               </ul>
             </nav>
